# bestbil

catkin_ws/: LaserScan.saved  LaserScan.saved~  mylaserrule.bmr  mylaserrule.bmr~
catkin_ws/src/catkin_src_packages/f1tenth_car/: CMakeLists.txt
catkin_ws/src/catkin_src_packages/f1tenth_car/scripts/: jetson_bond.py  mode_switch.py  remote_gui.py
devel/: .catkin  .rosinstall  setup.sh
devel/include/car_2019/: pid_input.h  pid_param.h
devel/include/f1tenth_car/: drive_param.h  drive_values.h  mode.h
devel/include/f1tenth_controller_straight_path/: pid_input.h  pid_param.h
devel/include/race_2019/: pid_input.h  pid_param.h
devel/lib/pkgconfig/: car_2019.pc  f1tenth_car.pc  f1tenth_controller_keyboard.pc  f1tenth_controller_straight_path.pc  f1tenth_controller_xbox360.pc  race_2019.pc  teleop.pc
report/: .gitignore
report/final/: .gitignore  GroupC-FinalReport.tex  GroupC-bibliography.bib  LTHtwocol.cls  Makefile
report/final/example/: Makefile  final.tex
report/plan/: plan.tex
report/plan/example/: Makefile
report/plan/figures/: FRTN40-SystemDesign.xml
src/: README.md
src/ROS-bags/: README.md
src/Shell scripts/: change_default_gateway.sh  date_from_local_machine.sh  jetson_multimachine_var.sh  motd.md  setup_network_bridge.sh
src/Teensy Firmware/: README.md
src/Teensy Firmware/teensy_drive/: teensy_drive.ino
src/Teensy Firmware/teensy_test/: teensy_test.ino
src/catkin_src_packages/car_2019/: CMakeLists.txt  package.xml
src/catkin_src_packages/f1tenth_controller_keyboard/: package.xml
src/catkin_src_packages/race_2019/: package.xml  (+1 more)
(+157 files in other folders)
